--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background: var(--cor-de-fundo);
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
-    font-size: 2em;
+    font-size: 1em;
     font-weight: 400;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 .container_caixa {
-    margin: 1em 0 2em 0;
+    margin: 0 6em;
 }
 
 .container_titulo {
@@ -49,10 +49,73 @@ body {
     border: 2px solid var(--branco-principal);
 }
 
+.container_aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
 .principal {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
     text-align: center;
+}
+
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+
+.container_descricao {
+    padding: 2em;
+}
+
+.descricao_titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao_texto {
+    color: var(--cinza-secundario);
+}
+
+.imagem-segunda-section {
+    width: 80%;
+}
+
+.dispositivo_titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
+
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos_listas {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.lista_rodape {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.lista_link a {
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
 }
